Hidding overflow content in the site body from tiny screens to prevent funny unintended horizontal scroll.

--- a/src/assets/styles/modules/_site-body.css
+++ b/src/assets/styles/modules/_site-body.css
@@ -14,6 +14,8 @@
   *************
 
   # Site Body
+    > For Tiny
+    > At Small
 
 */
 
@@ -24,8 +26,19 @@
 .site-body {
   /*position*/
   position: relative;
-  /*overflow*/
-  /* overflow: hidden; */
+
+  /****************
+  *  > For Tiny   *
+  ****************/
+
+  @mixin forTiny {
+    /*overflow*/
+    overflow: hidden;
+  }
+
+  /****************
+  *  > At Small   *
+  ****************/
 
   @mixin atSmall {
     /*structure*/
@@ -34,7 +47,6 @@
     margin-left: auto;
     margin-right: auto;
     padding-top: 1rem;
-    /* padding-bottom: 5rem; */
   }
 
 }
